force-app/main/default/objects/Commission_Structure__c/Commission_Structure__c.object-meta.xml
<CustomObject>
    <label>Commission Structure</label>
    <nameField>
        <label>Commission Structure Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Commission Structures</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>