force-app/main/default/objects/Commission_Structure__c/fields/Cents_kW_DC_First_Bill__c.field-meta.xml
<CustomField>
    <fullName>Cents_kW_DC_First_Bill__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Enter the cents per kW DC the partner receives up when the customer gets their first bill. This could be zero if they get the second part of their commission after the first bill is fully paid.</description>
    <inlineHelpText>Enter the cents per kW DC the partner receives up when the customer gets their first bill. This could be zero if they get the second part of their commission after the first bill is fully paid.</inlineHelpText>
    <label>Cents/kW DC First Bill Sent</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>