force-app/main/default/objects/Commission_Structure__c/fields/Cents_kW_DC_First_Bill_Paid__c.field-meta.xml
<CustomField>
    <fullName>Cents_kW_DC_First_Bill_Paid__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Enter the cents per kW DC the partner receives when the customer pays their first bill. This could be zero if they get the second part of their commission after the first bill is sent.</description>
    <inlineHelpText>Enter the cents per kW DC the partner receives when the customer pays their first bill. This could be zero if they get the second part of their commission after the first bill is sent.</inlineHelpText>
    <label>Cents/kW DC First Bill Paid</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>