force-app/main/default/objects/Commission_Structure__c/fields/Cents_kW_DC_Up_Front__c.field-meta.xml
<CustomField>
    <fullName>Cents_kW_DC_Up_Front__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Enter the cents per kW DC the partner receives up front, after full contract execution.</description>
    <inlineHelpText>Enter the cents per kW DC the partner receives up front, after full contract execution.</inlineHelpText>
    <label>Cents/kW DC Contract Execution</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>