force-app/main/default/objects/Commission_Structure__c/fields/Partner__c.field-meta.xml
<CustomField>
    <fullName>Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partner</label>
    <referenceTo>Partner__c</referenceTo>
    <relationshipLabel>Commission Structures</relationshipLabel>
    <relationshipName>Commission_Structures</relationshipName>
    <type>Lookup</type>
</CustomField>