force-app/main/default/objects/Commission_Structure__c/fields/Partner_Account__c.field-meta.xml
<CustomField>
    <fullName>Partner_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partner Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Commission Structures</relationshipLabel>
    <relationshipName>Commission_Structures</relationshipName>
    <type>Lookup</type>
</CustomField>