force-app/main/default/objects/Commission_Structure__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Commission Structures</relationshipLabel>
    <relationshipName>Commission_Structures</relationshipName>
    <type>Lookup</type>
</CustomField>