force-app/main/default/objects/Commission_Structure__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <inlineHelpText>Controls how Commission Payments are generated</inlineHelpText>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Variable by kW</fullName>
            </value>
            <value>
                <fullName>Fixed by Annual kWh</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>